welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: reassignment to val
    	max2=nums(j)
            ^